--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
 	<!-- responsive -->
 	<link href="css/responsive.css" rel="stylesheet" type="text/css" />
+	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 </head>
 <body>
 
@@ -106,6 +107,9 @@
 					<div class="about-image">
 						<img class="img-responsive" src="images/me.jpg" alt="">
 						<!-- <img class="signature" src="images/signature.png" alt=""> -->
+					</div>
+					<div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="light" data-vanity="mohd-amir-6591655a">
+						<a class="LI-simple-link" href='https://in.linkedin.com/in/mohd-amir-6591655a?trk=profile-badge'>Mohd Amir</a>
 					</div>
 				</div>
 				<div class="col-lg-8 col-md-8 col-sm-8">
